--- a/src/Style/index.css
+++ b/src/Style/index.css
@@ -10,6 +10,13 @@ body {
   font-family: "IBM Plex Serif", serif;
   font-size: 15px;
   background: #e2e2e2;
+  background: rgb(155, 246, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(155, 246, 255, 1) 17%,
+    rgba(176, 216, 228, 1) 56%,
+    rgba(231, 238, 242, 1) 98%
+  );
   display: flex;
   flex-direction: column;
   justify-content: center;
