--- a/src/Style/index.css
+++ b/src/Style/index.css
@@ -7,15 +7,14 @@
 body {
   margin: 0;
   padding: 0;
+  min-height: 100vh;
   font-family: "IBM Plex Serif", serif;
   font-size: 15px;
-  background: #e2e2e2;
-  background: rgb(155, 246, 255);
+  background: rgb(108, 225, 217);
   background: linear-gradient(
-    90deg,
-    rgba(155, 246, 255, 1) 17%,
-    rgba(176, 216, 228, 1) 56%,
-    rgba(231, 238, 242, 1) 98%
+    0deg,
+    rgba(108, 225, 217, 1) 29%,
+    rgba(249, 249, 249, 1) 88%
   );
   display: flex;
   flex-direction: column;
