--- a/src/Style/Questions.css
+++ b/src/Style/Questions.css
@@ -1,41 +1,94 @@
-.score {
-  display: flex;
-  justify-content: space-between;
-  margin: 40px;
-  font-size: 1.3em;
+.quizPage {
+  width: 90%;
+  margin: 3em auto 0 auto;
+}
+.quizPage h3 {
+  box-sizing: border-box;
+  display: block;
+  border-radius: 50%;
+  height: 3em;
+  width: 3em;
+  border: 2px solid #2884a2;
+  line-height: 3em;
+  font-size: 2em;
+  text-align: center;
+  position: absolute;
+  top: 50px;
+  left: 20px;
+}
+.complete {
+  height: 10px;
+  background-color: #9dd9ec;
+  border-radius: 10px;
+  margin: 0 auto;
 }
 
-.ques {
-  border: 2px outset rgb(170, 110, 226);
-  font-size: 30px;
-  margin: 10px;
-  padding: 10px 30px;
+.complete-inside {
+  background: linear-gradient(
+      270deg,
+      #6c63ff 13.39%,
+      rgba(255, 255, 255, 0) 69.93%
+    ),
+    #1be8da;
+  height: 10px;
+  border-radius: 10px;
 }
 
-.options {
+.question {
+  width: 80%;
+  margin: 20px auto;
+  padding: 1em;
+  box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
+    0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
+    0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 18px;
+  height: 400px;
+  background-color: #fff;
+}
+
+.question-inside {
+  height: 380px;
   display: flex;
   flex-direction: column;
-  row-gap: 10px;
-  font-size: 1.5em;
-  margin: 10px 20px;
+  justify-content: space-around;
 }
 
-.option {
-  display: block;
-  padding: 20px;
-  border: 2px solid rgb(47, 144, 255);
-  border-radius: 20px;
+.question-inside p {
+  border-bottom: 2px solid black;
+  padding: 1em;
+  font-size: 1.3em;
+  font-weight: bolder;
+}
+
+.question-inside ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.question-inside ul li {
+  list-style-type: none;
+  padding: 10px;
+  border: 2px solid gray;
+  margin: 10px;
+  width: 250px;
+  text-align: center;
   cursor: pointer;
-  text-align: center;
-  min-width: 300px;
+  border-radius: 5px;
 }
 
-.results {
-  margin-top: 50px;
-}
+@media (max-width: 820px) {
+  .question {
+    height: auto;
+  }
 
-.results h2 {
-  font-size: 3em;
-  margin-bottom: 20px;
-  text-align: center;
+  .question-inside {
+    height: auto;
+  }
+
+  .question-inside ul {
+    justify-content: center;
+  }
 }
