--- a/src/Style/index.css
+++ b/src/Style/index.css
@@ -12,10 +12,11 @@ body {
   font-size: 15px;
   background: rgb(108, 225, 217);
   background: linear-gradient(
-    0deg,
-    rgba(108, 225, 217, 1) 29%,
-    rgba(249, 249, 249, 1) 88%
-  );
+      177.94deg,
+      #ffffff 26.2%,
+      rgba(255, 255, 255, 0) 98.27%
+    ),
+    #6ce1d9;
   display: flex;
   flex-direction: column;
   justify-content: center;
