--- a/src/Style/Questions.css
+++ b/src/Style/Questions.css
@@ -95,9 +95,31 @@
 
 @media (max-width: 520px) {
   .quizPage h3 {
-    right: 130px;
     position: absolute;
-    top: 150px;
     left: 20px;
+    top: 60px;
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    font-size: 20px;
+    background-color: #9dd9ec;
+  }
+}
+
+@media (max-width: 400px) {
+  .quizPage h3 {
+    position: absolute;
+    left: 20px;
+    top: 60px;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    background-color: #9dd9ec;
+  }
+
+  .question-inside ul li {
+    width: 100%;
+    word-break: break-all;
   }
 }
